--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "rm -rf dist/* && rollup -c -w",
     "build": "rm -rf dist/* && rollup -c ",
     "prepublic:publish": "npm run build && npm version patch -f",
-    "public:publish": "npm publish -f"
+    "public:publish": "npm publish -f",
+    "postpublic:publish": "git push"
   },
   "repository": {
     "type": "git",
